qmsystem2 (0.0.4) unstable; urgency=low

  * Added a method for querying battery condition
	
 -- Matti Halme <matti.halme@nokia.com>  Tue, 02 Nov 2010 10:56:12 +0200

qmsystem2 (0.0.3) unstable; urgency=low

  * Fixes: NB#201532 - /usr/lib/pkgconfig/qmsystem2.pc lists incorrect includepath
	
 -- Yang Yang <ext-yang.25.yang@nokia.com>  Mon, 1 Nov 2010 12:50:19 +0300

qmsystem2 (0.0.2) unstable; urgency=low

  * Fixes: NB#198843 - offline mode button state is not preserved after reboot.
  * Fixes: NB#199370 - Copyright tag not defined in qmsystem
	
 -- Yang Yang <ext-yang.25.yang@nokia.com>  Fri, 29 Oct 2010 10:50:19 +0300

qmsystem2 (0.0.1) unstable; urgency=low

  * Namespace change
  * suffix "2" used
	
 -- Raimo Vuonnala <raimo.vuonnala@nokia.com>  Fri, 11 Oct 2010 12:14:54 +0300
	
	
qmsystem (0.2.12) unstable; urgency=low

  * Add QmKeys::RightCtrl

 -- Yang Yang <ext-yang.25.yang@nokia.com>  Fri, 15 Oct 2010 14:50:19 +0300

qmsystem (0.2.11) unstable; urgency=low

  * Fixes: NB#184852 -- unable to set Automatic time udpate to "ON" state
  * Prepared testing application for the coming timed-voland interface change
  * Disabled boring mangling warning
  * Deprecation of two broken auto time methods
  * Added 2 getters and 2 setters for auto system timed and time zone handling

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Wed, 13 Oct 2010 16:25:10 +0300

qmsystem (0.2.10) unstable; urgency=low

  * Added "-d" arg to enable debugging
  * When no clients, close all dev handles
  * Fixes: NB#197187 - qmkeyd should not open any input devices when no users need key signals

 -- Raimo Vuonnala <raimo.vuonnala@nokia.com>  Fri, 08 Oct 2010 14:22:44 +0300

qmsystem (0.2.9) unstable; urgency=low

  * Fixes: NB#196480 -  Music application control play/pause behaving oddly with BT devices

 -- Yang Yang <ext-yang.25.yang@nokia.com>  Fri, 24 Sep 2010 15:50:19 +0300

qmsystem (0.2.8) unstable; urgency=low

  [ Raimo Vuonnala ]